style/style.css
body * {
    font-family: pathwayGothic;
}

.box {
    width: 100px;
    border: 1px solid black;
    position: relative;
}


/* .button {
    border: none;
    margin: 0;
    width: 10%;
    height: 30px;
}
 */

.menu-container {
    width: 100%;
}

#myMenu {
    position: fixed;
    height: 40px;
    z-index: 70;
    width: 100%;
    list-style: none;
    display: flex;
    text-align: center;
    margin: 0 25%;
    padding: 0;
}

#myMenu li {
    padding: 10px;
    text-align: center;
    width: 10%;
}

#myMenu li a {
    color: white;
}

#myMenu li.active a {
    color: #DE1B1B;
}


/*responsive menu*/

.slicknav_menu {
    display: none;
}

@media screen and (max-width: 780px) {
    /* #myMenu is the original menu */
    #myMenu {
        display: none;
    }
    .slicknav_menu {
        display: block;
        position: fixed;
        z-index: 100;
        left: 0;
        right: 0;
    }
}

